unpackaged/main/default/objects/Account/fields/AccessAble__c.field-meta.xml
<CustomField>
    <fullName>AccessAble__c</fullName>
    <formula>IF(AccessAble_Total__c &gt; 0, IMAGE(&quot;/resource/AccessAbleGroup&quot;, &quot;&quot;, 32.326,109.222),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccessAble</label>
    <type>Text</type>
</CustomField>