unpackaged/main/default/objects/Account/fields/AccessAble_Total__c.field-meta.xml
<CustomField>
    <fullName>AccessAble_Total__c</fullName>
    <inlineHelpText>Total Number of AccessAble Members</inlineHelpText>
    <label>AccessAble Total</label>
    <summaryFilterItems>
        <field>Group__c.AccessAble_Group__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Group__c.Master_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>