unpackaged/main/default/objects/Account/fields/Account_ID_Case_Safe__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_Case_Safe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID - Case Safe</label>
    <type>Text</type>
</CustomField>