unpackaged/main/default/objects/Account/fields/Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name__c</fullName>
    <description>Used for conversion of Prospect to Master Group, so that field values are populated in the chatter post instead of IDs.</description>
    <formula>Owner.FirstName +&#39; &#39;+Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Name</label>
    <type>Text</type>
</CustomField>