unpackaged/main/default/objects/Account/fields/Account_Wiki__c.field-meta.xml
<CustomField>
    <fullName>Account_Wiki__c</fullName>
    <description>Jira Reference: USHI-4 
Rich Text field on Master Group page layout, so that Account Managers can keep notes about the Master Group account for future reference</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Wiki</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>