unpackaged/main/default/objects/Account/fields/Accounts1__c.field-meta.xml
<CustomField>
    <fullName>Accounts1__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounts1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>