unpackaged/main/default/objects/Account/fields/Affiliate_Agency__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains Account Lookup</description>
    <label>Affiliate Agency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agency</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partners</relationshipLabel>
    <relationshipName>Affiliate_Agencies</relationshipName>
    <type>Lookup</type>
</CustomField>