unpackaged/main/default/objects/Account/fields/Agency_Code__c.field-meta.xml
<CustomField>
    <fullName>Agency_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency Code</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>