unpackaged/main/default/objects/Account/fields/Agency_Id__c.field-meta.xml
<CustomField>
    <fullName>Agency_Id__c</fullName>
    <description>This field contains Agency id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>