unpackaged/main/default/objects/Account/fields/Agency_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Agency_Sub_Type__c</fullName>
    <label>Agency Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
            <value>
                <fullName>Service Bureau</fullName>
            </value>
            <value>
                <fullName>Broker Agency</fullName>
            </value>
            <value>
                <fullName>CGA</fullName>
            </value>
            <value>
                <fullName>MGA</fullName>
            </value>
            <value>
                <fullName>NCA</fullName>
            </value>
            <value>
                <fullName>BCBS</fullName>
            </value>
            <value>
                <fullName>Fla Farm Bureau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>