unpackaged/main/default/objects/Account/fields/BCBS__c.field-meta.xml
<CustomField>
    <fullName>BCBS__c</fullName>
    <description>Blue Cross Blue Shield captured in admin system for Groups</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Blue Cross Blue Shield Number</inlineHelpText>
    <label>BCBS Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>