unpackaged/main/default/objects/Account/fields/BCBS_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>BCBS_Group_Number__c</fullName>
    <description>BCBS Group Number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BCBS Group Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>