unpackaged/main/default/objects/Account/fields/Bill_Next_Generation_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Next_Generation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bill Next Generation Date</label>
    <type>Date</type>
</CustomField>