unpackaged/main/default/objects/Account/fields/Blue_Broker_Points__c.field-meta.xml
<CustomField>
    <fullName>Blue_Broker_Points__c</fullName>
    <label>Blue Broker Points</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>