unpackaged/main/default/objects/Account/fields/Blue_Broker_Status__c.field-meta.xml
<CustomField>
    <fullName>Blue_Broker_Status__c</fullName>
    <label>Blue Broker Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Blue Diamond</fullName>
            </value>
            <value>
                <fullName>Blue Preferred</fullName>
            </value>
            <value>
                <fullName>Blue Standard Plus</fullName>
            </value>
            <value>
                <fullName>Blue Standard</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>