unpackaged/main/default/objects/Account/fields/Blue_Region__c.field-meta.xml
<CustomField>
    <fullName>Blue_Region__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Blue Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>