unpackaged/main/default/objects/Account/fields/Blue_Rep_Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Blue_Rep_Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used by Process: Blue Rep Name Previous Value to store the user who last overrode the Blue Rep Name</description>
    <label>Blue Rep Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>