unpackaged/main/default/objects/Account/fields/Blue_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Blue_Rep_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Blue Rep Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Blue Rep Name must be a contact with record type of Partner Rep whose account is the same as the Partner account</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner Rep</value>
        </filterItems>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Partner__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>