unpackaged/main/default/objects/Account/fields/Blue_Rep_Name_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Blue_Rep_Name_Changed_Date__c</fullName>
    <description>This field will hold date and time for when blue rep is changed by any user (except EDI)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Blue Rep Name Changed Date</label>
    <type>DateTime</type>
</CustomField>