unpackaged/main/default/objects/Account/fields/Blue_Rep_Name_EDI__c.field-meta.xml
<CustomField>
    <fullName>Blue_Rep_Name_EDI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will contain the value of blue rep name which EDI tried to update.</description>
    <label>Blue Rep Name EDI</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Blue Rep Name EDI)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>