unpackaged/main/default/objects/Account/fields/Blue_Rep_Name_Previous__c.field-meta.xml
<CustomField>
    <fullName>Blue_Rep_Name_Previous__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will hold the previous  value of the Blue Rep Name field.</description>
    <label>Blue Rep Name Previous</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Blue Rep Name Previous)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>