unpackaged/main/default/objects/Account/fields/Blue_Rep_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Blue_Rep_Name_Text__c</fullName>
    <description>Used for conversion of Prospect to Master Group, so that field values are populated in the chatter post instead of IDs.</description>
    <formula>Blue_Rep_Name__r.FirstName +&#39; &#39;+ Blue_Rep_Name__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blue Rep Name Text</label>
    <type>Text</type>
</CustomField>