unpackaged/main/default/objects/Account/fields/Blue_Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Blue_Territory_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Blue Territory Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>