unpackaged/main/default/objects/Account/fields/BlueFit__c.field-meta.xml
<CustomField>
    <fullName>BlueFit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BlueFit</label>
    <type>Checkbox</type>
</CustomField>