unpackaged/main/default/objects/Account/fields/Concierge_Service__c.field-meta.xml
<CustomField>
    <fullName>Concierge_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concierge Service</label>
    <type>Checkbox</type>
</CustomField>