unpackaged/main/default/objects/Account/fields/Consortium_Group__c.field-meta.xml
<CustomField>
    <fullName>Consortium_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consortium Group</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Master Groups</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>