unpackaged/main/default/objects/Account/fields/County_Name__c.field-meta.xml
<CustomField>
    <fullName>County_Name__c</fullName>
    <description>Used for conversion of Prospect to Master Group, so that field values are populated in the chatter post instead of IDs.</description>
    <formula>County__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>County Name</label>
    <type>Text</type>
</CustomField>