unpackaged/main/default/objects/Account/fields/dummyField__c.field-meta.xml
<CustomField>
    <fullName>dummyField__c</fullName>
    <description>Added for Gearset Trail</description>
    <encryptionScheme>None</encryptionScheme>
    <label>dummyField</label>
    <length>50</length>
    <type>Text</type>
</CustomField>