unpackaged/main/default/objects/Account/fields/DUO_Service_Flag__c.field-meta.xml
<CustomField>
    <fullName>DUO_Service_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DUO Service Flag</label>
    <type>Checkbox</type>
</CustomField>