unpackaged/main/default/objects/Account/fields/Enrollment_Flag__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Flag__c</fullName>
    <formula>IF(  Open_Enrollment__c  , IMAGE(&quot;/resource/OpenEnrollment&quot;, &quot;&quot;, 45.326,109.222),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Flag</label>
    <type>Text</type>
</CustomField>