unpackaged/main/default/objects/Account/fields/Exclude_from_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Opportunities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Opportunities</label>
    <type>Checkbox</type>
</CustomField>