unpackaged/main/default/objects/Account/fields/FICATaxabilityDisability__c.field-meta.xml
<CustomField>
    <fullName>FICATaxabilityDisability__c</fullName>
    <label>SocialSecurity%Taxability(disability)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>