unpackaged/main/default/objects/Account/fields/Group_Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>Group_Anniversary_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Anniversary Date</label>
    <type>Date</type>
</CustomField>