unpackaged/main/default/objects/Account/fields/Group_Anniversary_Month__c.field-meta.xml
<CustomField>
    <fullName>Group_Anniversary_Month__c</fullName>
    <formula>CASE(MONTH(Group_Anniversary_Date__c), 1, &quot;January, &quot;, 2, &quot;February, &quot;, 3, &quot;March, &quot;,  4, &quot;April, &quot;,  5, &quot;May, &quot;,  6, &quot;June, &quot;, 7, &quot;July, &quot;, 8, &quot;August, &quot;, 9, &quot;September, &quot;, 10, &quot;October, &quot;, 11, &quot;November, &quot;, 12, &quot;December, &quot;, &quot;&quot;) &amp; TEXT(YEAR(Group_Anniversary_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Anniversary Month</label>
    <type>Text</type>
</CustomField>