unpackaged/main/default/objects/Account/fields/Group_Policy_num__c.field-meta.xml
<CustomField>
    <fullName>Group_Policy_num__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Policy#</label>
    <type>TextArea</type>
</CustomField>