unpackaged/main/default/objects/Account/fields/Group_Size__c.field-meta.xml
<CustomField>
    <fullName>Group_Size__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>