unpackaged/main/default/objects/Account/fields/Group_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Group_Termination_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Termination Date</label>
    <type>Date</type>
</CustomField>