unpackaged/main/default/objects/Account/fields/Has_TaxID__c.field-meta.xml
<CustomField>
    <fullName>Has_TaxID__c</fullName>
    <formula>IF(ISBLANK(Tax_Id__c), false, true)</formula>
    <label>Has TaxID</label>
    <type>Checkbox</type>
</CustomField>