unpackaged/main/default/objects/Account/fields/Integrated_Supplemental__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Supplemental__c</fullName>
    <formula>IF( BlueFit__c ,&quot;BlueFIT&quot;,
IF(DUO_Service_Flag__c ,&quot;DUO&quot;,&quot;&quot;))</formula>
    <label>Integrated Supplemental</label>
    <type>Text</type>
</CustomField>