unpackaged/main/default/objects/Account/fields/Issue_State__c.field-meta.xml
<CustomField>
    <fullName>Issue_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issue State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>