unpackaged/main/default/objects/Account/fields/Key_Client__c.field-meta.xml
<CustomField>
    <fullName>Key_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Client</label>
    <type>Checkbox</type>
</CustomField>