unpackaged/main/default/objects/Account/fields/Life_Risk_Value__c.field-meta.xml
<CustomField>
    <fullName>Life_Risk_Value__c</fullName>
    <description>Holds the text value of the risk score, for reporting purposes, since the image fields do not work well for counting, grouping, or exporting.</description>
    <formula>IF( Life_Risk_Score__c=1, &#39;Target&#39;, 
IF( Life_Risk_Score__c=2, &#39;Target&#39;, 
IF( Life_Risk_Score__c=3, &#39;Neutral&#39;, 
IF( Life_Risk_Score__c=4, &#39;Risk&#39;,&quot;&quot;) 
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Life Risk Value</label>
    <type>Text</type>
</CustomField>