unpackaged/main/default/objects/Account/fields/Likely_to_Churn__c.field-meta.xml
<CustomField>
    <fullName>Likely_to_Churn__c</fullName>
    <label>Likely to Churn?</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>