unpackaged/main/default/objects/Account/fields/LSV_Business__c.field-meta.xml
<CustomField>
    <fullName>LSV_Business__c</fullName>
    <inlineHelpText>&#39;Medical Only&#39; - Master Group has only medical asset
&#39;Medical and Ancillary&#39; - Master Group has medical asset and at least one ancillary asset
&#39;Ancillary Only&#39; - Master Group has no medical asset and at least one ancillary asset</inlineHelpText>
    <label>LSV Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LSV Customer</fullName>
            </value>
            <value>
                <fullName>Medical Only</fullName>
            </value>
            <value>
                <fullName>Ancillary Only</fullName>
            </value>
            <value>
                <fullName>Medical and Ancillary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>