unpackaged/main/default/objects/Account/fields/LSV_Group_Size__c.field-meta.xml
<CustomField>
    <fullName>LSV_Group_Size__c</fullName>
    <label>LSV Group Size</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>