unpackaged/main/default/objects/Account/fields/LSV_Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>LSV_Market_Segment__c</fullName>
    <label>LSV Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Mid-Market</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>