unpackaged/main/default/objects/Account/fields/LSV_Master_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>LSV_Master_Group_Id__c</fullName>
    <description>This field containsLSV Master Group Id information</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>LSV Master Group Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>