unpackaged/main/default/objects/Account/fields/LSV_Master_Id__c.field-meta.xml
<CustomField>
    <fullName>LSV_Master_Id__c</fullName>
    <description>LSV Master ID
Prefaced &#39;P&#39; for Partner
Prefaced &#39;A&#39; for Agency
Prefaced &#39;G&#39; for Master Group</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>LSV Master Id</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>