unpackaged/main/default/objects/Account/fields/LSV_Master_Partner_Id__c.field-meta.xml
<CustomField>
    <fullName>LSV_Master_Partner_Id__c</fullName>
    <description>This field acts as the unique Partner Id on Accounts</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>LSV Master Partner Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>