unpackaged/main/default/objects/Account/fields/LSV_Service_Executive__c.field-meta.xml
<CustomField>
    <fullName>LSV_Service_Executive__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LSV Service Executive</label>
    <length>50</length>
    <type>Text</type>
</CustomField>