unpackaged/main/default/objects/Account/fields/LTD_Risk_Assessment__c.field-meta.xml
<CustomField>
    <fullName>LTD_Risk_Assessment__c</fullName>
    <formula>IF( LTD_Risk_Score__c=1, IMAGE(&quot;/resource/1499677513000/icons/green.jpg&quot;,&#39;Target&#39;),
  IF( LTD_Risk_Score__c=2, IMAGE(&quot;/resource/1499677513000/icons/green.jpg&quot;,&#39;Target&#39;),
    IF( LTD_Risk_Score__c=3, IMAGE(&quot;/resource/1499677513000/icons/blue.jpg&quot;,&#39;Neutral&#39;),
      IF( LTD_Risk_Score__c=4, IMAGE(&quot;/resource/1499677513000/icons/red.jpg&quot;,&#39;Risk&#39;),&quot;&quot;)
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LTD Risk Assessment</label>
    <type>Text</type>
</CustomField>