unpackaged/main/default/objects/Account/fields/LTD_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>LTD_Risk_Score__c</fullName>
    <description>Field to hold predictive modeling scores (SOW 8 CR BRD reference: OR002-01)</description>
    <label>LTD Risk Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>