unpackaged/main/default/objects/Account/fields/Mailing_City_Sales__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City_Sales__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing City  - Sales</label>
    <length>80</length>
    <type>Text</type>
</CustomField>