unpackaged/main/default/objects/Account/fields/Mailing_Postal_Zip_Sales_Account__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Postal_Zip_Sales_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Postal/Zip - Sales</label>
    <length>80</length>
    <type>Text</type>
</CustomField>