unpackaged/main/default/objects/Account/fields/Mailing_State_Sales_Account__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State_Sales_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing State - Sales</label>
    <length>80</length>
    <type>Text</type>
</CustomField>