unpackaged/main/default/objects/Account/fields/Mailing_Street_Sales_Account__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street_Sales_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Street - Sales</label>
    <length>80</length>
    <type>Text</type>
</CustomField>