unpackaged/main/default/objects/Account/fields/Manually_Create_Opp__c.field-meta.xml
<CustomField>
    <fullName>Manually_Create_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is being used in Opportunity creation batch.</description>
    <label>Manually Create Opp</label>
    <type>Checkbox</type>
</CustomField>