unpackaged/main/default/objects/Account/fields/Manually_Create_Opp_User__c.field-meta.xml
<CustomField>
    <fullName>Manually_Create_Opp_User__c</fullName>
    <description>This field is being used in Auto create Opportunity batch.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Manually Create Opp User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>