unpackaged/main/default/objects/Account/fields/Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment__c</fullName>
    <inlineHelpText>FL uses Small, Mid-Market and Large.
AR uses Small and Large.
HI uses the others.</inlineHelpText>
    <label>Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Segment</valueSetName>
    </valueSet>
</CustomField>