unpackaged/main/default/objects/Account/fields/Master_Agency_Record__c.field-meta.xml
<CustomField>
    <fullName>Master_Agency_Record__c</fullName>
    <formula>IF( AND(ISBLANK(Service_Master_Agency__c),  RecordType.Name = &#39;Agency&#39;) , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Agency</label>
    <type>Checkbox</type>
</CustomField>