unpackaged/main/default/objects/Account/fields/Master_Group__c.field-meta.xml
<CustomField>
    <fullName>Master_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When this field is populated on a Partner record, the Opportunities, Contacts, and Activities are moved over to the Master Group, chatter post created on master group, and Prospect record is deleted.</description>
    <inlineHelpText>Enter the name of the master group to merge this Prospect with the specified Master Group.</inlineHelpText>
    <label>Master Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Master_Group</value>
        </filterItems>
        <filterItems>
            <field>Account.Partner__c</field>
            <operation>equals</operation>
            <valueField>$Source.Partner__c</valueField>
        </filterItems>
        <infoMessage>You can only associate a Prospect with a Master Group</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Master Group)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>