unpackaged/main/default/objects/Account/fields/MedicareTaxabilityAbsence__c.field-meta.xml
<CustomField>
    <fullName>MedicareTaxabilityAbsence__c</fullName>
    <label>Medicare % Taxability (absence)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>