unpackaged/main/default/objects/Account/fields/Name_Substring__c.field-meta.xml
<CustomField>
    <fullName>Name_Substring__c</fullName>
    <formula>LEFT( Name , 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Substring</label>
    <type>Text</type>
</CustomField>